# nsfrelationalcausalinf

./: .gitignore  .gitmodules  .openreview-dataset-91a1707db6347459dd94232c937161599b62619b.zip.icloud  README.md  dag.py  dgp.py  hume.py  hume_synthetic_data_experiments.py  pyproject.toml  set_summary_kernel.py  uni.json  untitled2.py
experiments/: .Unit_Table_Learned_Moment_Summary.csv.icloud  .rel_data.csv.icloud  .relational_df.spydata.icloud  Unit_Table_Complex.csv  Unit_Table_Learned_Moment_Summary.csv  Unit_Table_Mean.csv  Unit_Table_Median.csv  common.py  data_gen.py  data_gen_2  data_gen_2.py  df_tau_oct13_0000.npy  df_tau_oct13_0001.npy  df_tau_oct13_0002.npy  df_tau_oct13_0003.npy  df_tau_oct13_0004.npy  df_tau_oct13_0005.npy  df_tau_oct13_0006.npy  df_tau_oct13_0007.npy  df_tau_oct13_0010.npy  df_tau_oct13_0011.npy  df_tau_oct13_0012.npy  df_tau_oct13_0013.npy  double_df.csv  estimate_real_data.py  estimation.py  estimation_2.py  flat.py  grounding.py  learn_embedding.py  network.ipynb  openreview.gexf  prestige.py  simulated_data_0000.npy  simulated_data_0001.npy  simulated_data_0002.npy  simulated_data_0003.npy  simulated_data_0004.npy  simulated_data_0005.npy  simulated_data_0006.npy  (+22 more)
experiments/Logs/: Estimate.csv  Latent_Estimate.csv  complex_estimate.csv  (+3 more)
learning/: __main__.py  models.py  simple.py
movielens/: experiment.py  plotting.py
synthetic/: __main__.py  attributes.py  endogenous.py  entities.py  fixed_size.py  generate.py  main.py  parameters.py  relations.py  structural_eqs.py  summarize.py  util.py  variable_size.py  variable_size_2.py
(+5 files in other folders)
