[tool.poetry]
name = "nsfrelationalcausalinf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
scipy = "^1.2"
torch = "^1.0"
scikit-learn = "^0.20.3"
seaborn = "^0.9.0"
matplotlib = "2.1.2"

[tool.poetry.dev-dependencies]
names = "^0.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
